--- a/_config.yml
+++ b/_config.yml
@@ -127,8 +127,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: P # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Screed # blog_name will be displayed in your blog page
+blog_description: A bunch of rants
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -233,7 +233,6 @@ exclude:
   - _pages/teaching.md
   - _pages/publications.md
   - _pages/news.md
-  - _posts/*
   - _news/*
   - _projects/*
       
@@ -295,8 +294,8 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["nature", "poem", "nature"] # these tags will be displayed on the front page of your blog
+display_categories: [] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
