Changed items order in nav-bar

--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: Screed # blog_name will be displayed in your blog page
+blog_name: Reverie # blog_name will be displayed in your blog page
 blog_description: A bunch of rants
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
