Updated projects page

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,8 +1,10 @@
 github_repos:
 
   - InvincibleJuggernaut/Simon
+  - InvincibleJuggernaut/WOEMpet
+  - InvincibleJuggernaut/ProgSqrWavGen
   - InvincibleJuggernaut/Cyclive
-
+  
   - InvincibleJuggernaut/P.R.I.D.E
   - InvincibleJuggernaut/VirQ
   - InvincibleJuggernaut/Clamp
